Adição das rotas para pesquisa de CPF/CNPJ no endpoint de clientes
